# Salesforce-agent

./: README.md
mock-salesforce-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
mock-salesforce-mcp/app/: __init__.py  approvals.py  datastore.py  jobs.py  models.py  policy.py  prompts.py  server.py
mock-salesforce-mcp/app/operation/: __init__.py  discover.py  resources.py  tools.py
mock-salesforce-mcp/app/utility/: __init__.py  auth.py  errors.py  fixtures.py
mock-salesforce-mcp/fixtures/: accounts.json  campaigns.json  cases.json  opportunities.json  users.json
mock-salesforce-mcp/tests/: test_datastore.py  test_hybrid_integration.py  test_policy_and_tools.py
neo4j-local-setup/: .gitignore  README.md  requirements.txt
neo4j-local-setup/data/: sample_graph.json
neo4j-local-setup/neo4j_setup/: __init__.py  api.py  config.py  (+6 more)
salesforce-agent/: .dockerignore  AGENT_DESIGN.md  AGENT_FLOW.docx  AGENT_FLOW.md  Dockerfile  README.md  pyproject.toml
salesforce-agent-ui/: README.md  index.html  package-lock.json  package.json
salesforce-agent/agents/: __init__.py  api.py  context.py  mcp_client.py  prompts.py  routing.py  run.py  server.py  service.py  system.py  utils.py
salesforce-agent/agents/nodes/: __init__.py  analysis.py  approval.py  compliance.py  context_agent.py  discovery.py  execution.py  supervisor.py
salesforce-agent/tests/: test_api.py  test_approval.py  test_compliance.py  test_execution.py  test_graph.py  test_routing.py  test_service.py
salesforce-hybrid-sim/: README.md  requirements.txt
scripts/: run-dev.ps1  setup.ps1
(+14 files in other folders)
