[project]
name = "mock-salesforce-mcp"
version = "0.1.0"
description = "Mock Salesforce MCP server based on Appendix A contract."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.operation", "app.utility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
